# prod-level-AI-system

./: .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
.github/: pull_request_template.md
.github/workflows/: ci.yml
app/: config.py  dependencies.py  logging_config.py  main.py
app/middleware/: __init__.py  logging.py
app/models/: __init__.py  database.py
app/routers/: __init__.py  health.py
app/services/: __init__.py  chat_history.py
migrations/: env.py
migrations/versions/: 001_create_conversations_and_messages.py
tests/: __init__.py  conftest.py
tests/integration/: __init__.py
tests/unit/: __init__.py  test_chat_history.py  test_health.py  test_logging_middleware.py
