[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# Hatchling (our build backend) looks for a directory whose name matches the
# project name to know what to package. Our project is named "chat-api" but
# the actual Python package lives in the "app/" directory — those names don't
# match, so we must point hatchling at it explicitly.
# Without this, `pip install -e .` fails with "Unable to determine which files
# to ship inside the wheel".
[tool.hatch.build.targets.wheel]
packages = ["app"]

[project]
name = "chat-api"
version = "0.1.0"
description = "Production-level chat API powered by Ollama local models"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    # ollama: Python client for the Ollama local model server.
    # Ollama runs open-source LLMs (Llama, Mistral, Gemma, etc.) locally
    # via a REST API at localhost:11434. No API key, no usage costs.
    # Docs: https://github.com/ollama/ollama-python
    "ollama>=0.4.0",
    "pydantic-settings>=2.6.0",
    "asyncpg>=0.30.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "alembic>=1.14.0",
    "redis>=5.2.0",
    "structlog>=24.4.0",
    "sentry-sdk[fastapi]>=2.19.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.28.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
    "pre-commit>=4.0.0",
]

[tool.ruff]
target-version = "py312"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
